--- a/00 Doc/Knitr_Doc.html
+++ b/00 Doc/Knitr_Doc.html
@@ -66,8 +66,8 @@ img {
 <p><strong>For this project, we use in-depth government census data that focuses on student obesity/overweight rates from elementary to high schools within New York. We utilize SQL commands such as Partition By and rank() in order to display crosstabs in R which match crosstabs made from the same data in Tableau</strong></p>
 <p><strong>Authors: Bruno De Hoyos (bd8739), Estevan Garza (eg22453)</strong></p>
 <blockquote>
-<p>NOTE:</p>
-<p>Due to the SQL Database crashing several times over the past few days, our productivity on this project was severly affected. We were unable to get all of the SQL commands for the tables completed because of this.</p>
+<p><strong>NOTE:</strong></p>
+<p>Due to the SQL Database crashing several times over the past few days leading up to the project deadline, our productivity on this project was severly affected. Because of this, we were unable to get all of the SQL commands for the tables completed.</p>
 </blockquote>
 <div id="importing-data-frames" class="section level2">
 <h2>Importing data frames:</h2>
